<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.microchip.sc.mpfsbootmodeprogrammer</groupId>
  <artifactId>mpfsBootmodeProgrammer</artifactId>
  <version>3.7</version>

  <name>mpfsBootmodeProgrammer</name>
  <url>http://microsemi.com/softconsole</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>10</maven.compiler.source>
    <maven.compiler.target>10</maven.compiler.target>
  </properties>
  
  <dependencies>
   
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>5.7.1</version>
		<scope>test</scope>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
	<dependency>
	    <groupId>com.fazecast</groupId>
	    <artifactId>jSerialComm</artifactId>
	    <version>2.6.2</version>
	    <scope>test</scope>
	</dependency>
	

    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
    <dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-api</artifactId>
		<version>5.7.1</version>
		<scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>5.7.1</version>
	    <scope>test</scope>
    </dependency>
    
	<!-- https://mvnrepository.com/artifact/org.junit-pioneer/junit-pioneer -->
	<dependency>
	    <groupId>org.junit-pioneer</groupId>
	    <artifactId>junit-pioneer</artifactId>
	    <version>1.4.2</version>
	    <scope>test</scope>
	</dependency>
    

    <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
    <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-jdk15on</artifactId>
        <version>1.68</version>
        <scope>compile</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
    <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcpkix-jdk15on</artifactId>
        <version>1.68</version>
        <scope>compile</scope>
    </dependency>
    
	<!-- https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-annotations -->
	<dependency>
	    <groupId>com.github.spotbugs</groupId>
	    <artifactId>spotbugs-annotations</artifactId>
	    <version>4.2.0</version>
	</dependency>
    
    
  </dependencies>

  <build>
	<resources>
       <resource>
	        <directory>src/main/resources</directory>
	    </resource>
    </resources>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
          
		<plugin>
		  <groupId>com.github.spotbugs</groupId>
		  <artifactId>spotbugs-maven-plugin</artifactId>
		  <version>4.1.3</version>
		  <dependencies>
		    <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
		    <dependency>
		      <groupId>com.github.spotbugs</groupId>
		      <artifactId>spotbugs</artifactId>
		      <version>4.2.0</version>
		    </dependency>
		  </dependencies>
		</plugin>
          
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-assembly-plugin</artifactId>
	        <version>3.3.0</version>
	        <configuration>
	        	<archive>
	                <manifest>
	                    <mainClass>com.microchip.sc.mpfsbootmodeprogrammer.main.MainClass</mainClass>
	                </manifest>	        	
	        	</archive>
                <descriptors>
                	<descriptor>assembly-runtime.xml</descriptor>                	
                	<descriptor>assembly-src.xml</descriptor>                	
                </descriptors>       	
	        </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>	                  
        </plugin>        
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          <configuration>
            <groups>worksWithoutHw</groups>
            <environmentVariables>
                <SC_INSTALL_DIR>D:\work\microchip\sc6.6-2021.1</SC_INSTALL_DIR>
            </environmentVariables>          	
			
			<!-- https://github.com/junit-pioneer/junit-pioneer/issues/509 -->
			<!-- https://github.com/SBPrime/AsyncWorldEdit-Premium/issues/247 -->			
			<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>			
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
	
  </build>
</project>
